# genesis

./: .gitignore  BOUNTY.md  Cargo.toml  README.md  build.rs  config.go  doopenwrt.sh  go.mod  go.sum  main  main.go  main_test.go  openwrt.go  systemd.go  zz.toml
etc/config/genesis/: stable.json  stable.toml
etc/devguard/genesis/templates/: firewall.x.v0
examples/: main.rs
src/: ast.zz  genesis.rs  lib.rs  main.zz  openwrt.rs  openwrt.zz  systemd.rs
tests/: a.d.eth0.network  a.d.monitor.network  a.toml  a.wireless
tests/a/etc/config/: firewall  network  wireless
tests/a/etc/systemd/network/: 20-genesis-publicap.network
