[package]
name = "devguard-genesis"
version = "0.1.2"
authors = ["Arvid E. Picciani <aep@exys.org>"]
edition = "2018"
license     = "MIT"
description = "devguard generic iot configuration service"
homepage    = "https://devguard.io"
repository  = "https://github.com/devguardio/genesis"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axon        = "0.2.0"
carrier     = { version = "0.12.0"}
bytes       = "0.4"
serde       = {version = "1", features = ['derive']}
toml        = "0.5"
dirs        = "2.0.2"
ipnet       = "2.0.0"
tinylogger  = "0.1"
log         = "0.4"
sha2        = "0.8"
handlebars  = "2.0.2"

